--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <title>Kalkulačka s historií výpočtů</title>
+    <link rel="icon" type="image/svg+xml" href="/pics/calc-logo.svg">
 </head>
 <body>
 
